--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,17 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Subir API
+      run: |
+        nohup npm start > server.log 2>&1 &
+        sleep 10 # Increase the time
+
+    - name: Wait for API to start
+      run: |
+        until curl -s http://localhost:3000; do
+          echo "Waiting for server to start..."
+          sleep 2
+        done
+
     - name: Run tests
       run: npm test
