--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "test": "mocha test/**/*.test.js --timeout 10000",
     "test-external": "mocha test/external/**/*.test.js --timeout 10000",
     "test-controller": "mocha test/controller/**/*.test.js --timeout 10000",
-    "start": "node index.js"
+    "start": "node server.js"
   }
 }
